--- a/Homework 3/index.html
+++ b/Homework 3/index.html
@@ -4,15 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width= , initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Name that Movie!</title>
+    <title>Psychic Game</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="assets/javascript/game.js"></script>
 </head>
 <body>
 
-<h1>Press any key to get started!</h1>    
+<h1>Guess what letter I'm thinking of</h1>    
 
-    
+<div id="wins">Wins: </div>
+<div id="losses">Losses: </div>    
+<div id="guesses">Remaining Turns: </div>
+<div id="prevGuesses">Previous Letters: </div> 
+
+
+
 </body>
 </html>
